Some more changes on is/has